# wbc-playground

./: .gitignore
.devcontainer/arm64/: devcontainer.json
.devcontainer/x86/: devcontainer.json
src/a2d-wbc/: CMakeLists.txt  README.md  package.xml
src/a2d-wbc/assets/A2D_NoHand/: A2D_NoHand_Flattened.urdf  A2D_NoHand_Flattened.urdf.backup
src/a2d-wbc/config/: fk_visualization.rviz  wbc_config.yaml  wbc_visualization.rviz
src/a2d-wbc/include/wbc/: ArmControl_node.h  fk_node.h  ik_node.h  ik_solve_logger.h  jointLimitManager.h  robot_kinematics_tool.h  ruckigcontroller.h
src/a2d-wbc/launch/: dual_arm_control.launch.py  fk_node.launch.py  ik_node.launch.py  ruckig_control.launch.py
src/a2d-wbc/msg/: TaskCommand.msg  WBCCommand.msg  WBCState.msg
src/a2d-wbc/src/: ArmControl_node.cpp  fk_node.cpp  ik_node.cpp  ik_solve_logger.cpp  jointLimitManager.cpp  robot_kinematics_tool.cpp  tinyxml2.cpp
src/genie_msgs/: CMakeLists.txt  package.xml
src/genie_msgs/msg/: ArmState.msg  EndState.msg  HeadState.msg  MotorState.msg  Position.msg  WaistState.msg
