<?xml version="1.0"?>
<package format="3">
  <name>wbc</name>
  <version>1.0.0</version>
  <description>PSI Glove Whole Body Control - Integration with WBC library for robot arm control</description>
  
  <maintainer email="psi@robotics.ai">PSI Robotics Team</maintainer>
  <license>BSD-3-Clause</license>
  
  <url type="website">https://github.com/psi-glove/wbc</url>
  <url type="repository">https://github.com/psi-glove/wbc</url>
  <url type="bugtracker">https://github.com/psi-glove/wbc/issues</url>

  <author email="psi@robotics.ai">PSI Robotics Team</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  
  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- TF and robot model -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  
  <!-- WBC dependencies -->
  <depend>eigen3-cmake-module</depend>
  
  <!-- PSI Glove integration -->
  <depend>psi_glove</depend>
  <depend>genie_msgs</depend>
  <depend>ament_index_cpp</depend>
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- ROS2 interface packages -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
